--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -8,15 +8,15 @@
 
 
 
-<div fxFlex>
-  <mat-card>
+<div fxFlex ="40">
+  <mat-card *ngIf="dish"> 
     <mat-card-header>
       <mat-card-title>
         <h3>{{dish.name | uppercase}}</h3>
       </mat-card-title>
     </mat-card-header>
     <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-    <mat-card-content>
+    <mat-card-content> 
       <p>{{dish.description}}
       </p>
     </mat-card-content>
@@ -28,22 +28,19 @@
 </div>
 
 
-<div fxFlex >
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>
-        <h3> Comments </h3>
-      </mat-card-title>
-    </mat-card-header>
-
-    <mat-list-item *ngFor="let comments of dish.comments">
-      <p matLine>{{comments.comment}}</p>
+<div fxFlex="40">
+  <mat-list *ngIf="dish">
+      <h3> Comments </h3>
+  <mat-list-item *ngFor="let comments of dish.comments">
+      <h4 matLine>{{comments.comment}}</h4>
       <p matLine>{{comments.rating}} Stars</p>
-      <p matLine>-- {{comments.author}} {{comments.date | date}}</p>
+      <p matLine>
+        <span>-- {{comments.author}} {{comments.date | date}}</span>
+      </p>
     </mat-list-item>
     
 
-  </mat-card>
+  </mat-list>
 </div>
 
 
