--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,7 +54,7 @@
   </div>
 
 
-  <div fxFlex>
+  <div fxFlex *ngIf="LEADERS">
     <h2>Corporate Leadership</h2>
     <mat-list *ngIf="LEADERS">
     <mat-list-item *ngFor="let leader of LEADERS">
@@ -64,8 +64,14 @@
           <p matLine>{{leader.description}}</p>
     </mat-list-item>
     </mat-list>
-
   </div>
+
+
+  <div [hidden]="LEADERS">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+  
+
 </div>
 
 
