--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,17 @@
   </mat-card-content>
 </mat-card>
 
+<div [hidden]="dish || errMess">
+  <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+
+
+<div fxFlex *ngIf="dishErrMess">
+<h2>Error</h2>
+<h4>{{dishErrMess}}</h4>
+</div>
+
+
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
     <div mat-card-avatar></div>
@@ -52,6 +63,13 @@
 
 <div [hidden]="leader">
   <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+
+
+
+<div fxFlex *ngIf="errMess">
+  <h2>Error</h2>
+  <h4>{{errMess}}</h4>
 </div>
 
 
