--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -8,7 +8,7 @@
 
 
 
-<div fxFlex ="40" *ngIf="dish">
+<div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
   <mat-card > 
     <mat-card-header>
       <mat-card-title>
@@ -17,8 +17,7 @@
     </mat-card-header>
         <img mat-card-image src="{{ BaseURL + dish.image }}" alt={{dish.name}}>
     <mat-card-content> 
-      <p>{{dish.description}}
-      </p>
+      <p>{{dish.description}}</p>
     </mat-card-content>
     <mat-card-actions>
       <mat-card-actions>
@@ -34,7 +33,7 @@
 </div>
 
 
-<div fxFlex="40" *ngIf="dish" fxLayout="column">
+<div fxFlex="40" *ngIf="dish" fxLayout="column" [@visibility]="visibility" >
   <div fxFlex>
     <mat-list >
     <h3 matLine>Comments</h3>
