--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -8,7 +8,7 @@
 
 
 
-<div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
+<div fxFlex="40" *ngIf="dish" [@visibility]="visibility"  [@expand] >
   <mat-card > 
     <mat-card-header>
       <mat-card-title>
@@ -33,7 +33,7 @@
 </div>
 
 
-<div fxFlex="40" *ngIf="dish" fxLayout="column" [@visibility]="visibility" >
+<div fxFlex="40" *ngIf="dish" fxLayout="column" [@visibility]="visibility" [@expand] >
   <div fxFlex>
     <mat-list >
     <h3 matLine>Comments</h3>
